--- a/FaceRecognitionModel.ipynb
+++ b/FaceRecognitionModel.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "XASiLC5wUUnp"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "TjDtWPIllzT4"
       },
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -145,10 +145,10 @@
         "from clearml import Task\n",
         "\n",
         "Task.set_credentials(\n",
-        "     api_host=\"https://api.clear.ml\", \n",
-        "     web_host=\"https://app.clear.ml\", \n",
-        "     files_host=\"https://files.clear.ml\", \n",
-        "     key='K87AYXOFYVT60A89H32E', \n",
+        "     api_host=\"https://api.clear.ml\",\n",
+        "     web_host=\"https://app.clear.ml\",\n",
+        "     files_host=\"https://files.clear.ml\",\n",
+        "     key='K87AYXOFYVT60A89H32E',\n",
         "     secret='xsvMF2rp6TzjXUWZdr6EXQZne7fUUP0feRRM2IC9j425ayd4WA'\n",
         ")\n",
         "\n",
@@ -178,12 +178,12 @@
       "metadata": {
         "id": "D030FwoQnG-o"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "fJxf6ml7b6pS"
       },
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "UA24AqV8a0Eo"
       },
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "ILyUAs1xbI4r",
         "colab": {
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,10 +414,10 @@
         "        train_correct += (predicted == labels).sum().item()\n",
         "    train_accuracy = 100 * train_correct / train_total\n",
         "    train_loss /= len(train_loader)\n",
-        "    \n",
+        "\n",
         "    task.get_logger().report_scalar(title='Train Accuracy', series='accuracy', value=train_accuracy, iteration=epoch)\n",
         "    task.get_logger().report_scalar(title='Train Loss', series='loss', value=train_loss, iteration=epoch)\n",
-        "    \n",
+        "\n",
         "    model.eval()\n",
         "    with torch.no_grad():\n",
         "        val_correct = 0\n",
@@ -433,7 +433,7 @@
         "            loss = criterion(outputs, labels)\n",
         "            val_loss += loss.item()\n",
         "        val_accuracy = 100 * val_correct / val_total\n",
-        "        \n",
+        "\n",
         "        task.get_logger().report_scalar(title='Validation Accuracy', series='accuracy', value=val_accuracy, iteration=epoch)\n",
         "        task.get_logger().report_scalar(title='Validation Loss', series='loss', value=val_loss, iteration=epoch)\n",
         "\n",
@@ -460,7 +460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -512,57 +512,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tmwsGekOzdZ-",
-        "outputId": "38147522-6ac0-41fd-97e2-166cf8f372ff"
+        "outputId": "876e634a-e47c-465c-eeaf-718a09fdce9b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Testing accuracy: 87.21%\n",
-            "[29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 25, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 31, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 30, 30, 30, 30, 30, 30, 30, 30, 30, 30, 39, 39, 39, 39, 39, 39, 39, 39, 39, 39, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 40, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42, 42]\n"
+            "Testing accuracy: 90.70%\n"
           ]
         }
       ],
       "source": [
-        "from collections import Counter\n",
+        "import statistics\n",
         "\n",
-        "model.eval()\n",
-        "with torch.no_grad():\n",
-        "    predicted_labels = []\n",
-        "    true_labels = []\n",
-        "    for images, labels in test_loader:\n",
-        "        images = images.to(device)\n",
-        "        outputs = model(images)\n",
-        "        _, predicted = torch.max(outputs.data, 1)\n",
-        "        predicted_labels.extend(predicted.tolist())\n",
-        "        true_labels.extend(labels.tolist())\n",
+        "def replace_with_mode(data):\n",
+        "    mode_sequence = []\n",
+        "    for i in range(0, len(data), 20):\n",
+        "        subset = data[i:i+20]\n",
+        "        mode = statistics.mode(subset)\n",
+        "        mode_sequence += [mode] * 20\n",
         "\n",
-        "    # Find the mode in each jump of 10 predictions\n",
-        "    new_predicted_labels = []\n",
-        "    for i in range(0, len(predicted_labels), 10):\n",
-        "        jump = predicted_labels[i:i+10]\n",
-        "        mode_label = Counter(jump).most_common(1)[0][0]\n",
-        "        new_predicted_labels.extend([mode_label]*10)\n",
+        "    return mode_sequence\n",
         "\n",
-        "    # Replace misclassifications with the mode label\n",
-        "    for i in range(len(predicted_labels)):\n",
-        "        if predicted_labels[i] != new_predicted_labels[i]:\n",
-        "            predicted_labels[i] = new_predicted_labels[i]\n",
+        "def calculate_accuracy(array1, array2):\n",
+        "    if len(array1) != len(array2):\n",
+        "        raise ValueError(\"Arrays must have the same length.\")\n",
         "\n",
-        "    correct = sum(1 for p, t in zip(predicted_labels, true_labels) if p == t)\n",
-        "    total = len(predicted_labels)\n",
-        "    accuracy = correct / total * 100\n",
+        "    total_elements = len(array1)\n",
+        "    correct_predictions = sum(a == b for a, b in zip(array1, array2))\n",
+        "    accuracy = correct_predictions / total_elements\n",
         "\n",
-        "# Print the predicted labels and testing accuracy\n",
-        "print(f\"Testing accuracy: {accuracy:.2f}%\")\n",
-        "print(predicted_labels)\n"
+        "    return accuracy\n",
+        "\n",
+        "newpred = replace_with_mode(predicted_labels)\n",
+        "accuracy = calculate_accuracy(true_labels, newpred)\n",
+        "print(f\"Testing accuracy: {accuracy*100:.2f}%\")"
       ]
     }
   ],
